// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FileRenderer component snapshot is not loading, with error 1`] = `
<FileCard
  file={
    Object {
      "downloadUrl": "file download url",
      "name": "filename.txt",
    }
  }
  key="file download url"
>
  <ErrorBanner
    prop="hooks.errorProps"
  />
</FileCard>
`;

exports[`FileRenderer component snapshot isLoading, no Error 1`] = `
<FileCard
  file={
    Object {
      "downloadUrl": "file download url",
      "name": "filename.txt",
    }
  }
  key="file download url"
>
  <Renderer
    prop="hooks.rendererProps"
  />
</FileCard>
`;
